--- a/styles/app-tailwind.css
+++ b/styles/app-tailwind.css
@@ -188,7 +188,7 @@
   @apply fixed z-40 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2
 }
 .dialog-overlay{
-  @apply bg-gray-800/50 fixed inset-0 z-40 dark:bg-gray-900/75
+  @apply bg-gray-800/50 fixed inset-0 z-40 dark:bg-gray-1000/75
 }
 
 .dialog-content{
